alteracoes para incluir + para e + nacional

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,7 +20,7 @@
   </div>
   <div class="col-sm-4 text-center">
     <a routerLink="/" routerLinkActive="active" class="logo"><img
-        src="http://www.portalparanews.com.br/images/header-logo.png" alt=""></a>
+        src="/assets/img/logo.png" alt=""></a>
   </div>
   <div class="col-sm-4 text-center">
     <input style="margin-top: 15px" class="form-control mr-sm-2" type="search" placeholder="Pesquisar notícia"
